Changed Background and altered container bg transparency

--- a/views/Login.html
+++ b/views/Login.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="../public/css/login.css">
 </head>
 <body>
-  <div id="block">
-    <div class="container-sm p-3 border">
-        <div class="container-sm p-3 border">
+    <div class="container-sm p-3 con1">
+        <div class="container-sm p-3 border con2">
             <form>
                 <div class="form-group">
                   <label for="exampleInputEmail1">Email address</label>
@@ -31,6 +30,5 @@
 
         </div>
     </div>
-  </div>
 </body>
 </html>
