--- a/views/Login.html
+++ b/views/Login.html
@@ -9,21 +9,24 @@
 </head>
 <body>
     <div class="container-sm p-3 con1">
-        <div class="container-sm p-3 border con2">
+      <div class="col-sm-6 p-3 con3">
+        <img src="https://images.pexels.com/photos/2047905/pexels-photo-2047905.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" width="100%" height="100%">
+      </div>
+        <div class="col-sm-6 p-3 con2">
             <form>
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Email address</label>
+                  <label for="exampleInputEmail1">EMAIL ADDRESS</label>
                   <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
                   <small id="emailHelp" class="form-text text-muted"></small>
-                </div>
+                </div><br>
                 <div class="form-group">
-                  <label for="exampleInputPassword1">Password</label>
+                  <label for="exampleInputPassword1">PASSWORD</label>
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                   <small id="pwdHelp" class="form-text text-muted"></small>
-                </div>
+                </div><br>
                 <div class="link">
                   <label class="form-check-label" for="exampleCheck1">Not a user? <a href="" class="link">Signup</a></label>
-                </div>
+                </div><br>
                 <button type="submit" class="btn btn-success">Submit</button>
                 <button type="reset" class="btn btn-secondary">Reset</button>
               </form>
