--- a/views/Login.html
+++ b/views/Login.html
@@ -16,16 +16,16 @@
             <form>
                 <div class="form-group">
                   <label for="exampleInputEmail1">EMAIL ADDRESS</label>
-                  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+                  <input type="text" class="form-control" id="Email" aria-describedby="emailHelp" placeholder="  Email">
                   <small id="emailHelp" class="form-text text-muted"></small>
                 </div><br>
                 <div class="form-group">
                   <label for="exampleInputPassword1">PASSWORD</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                  <input type="password" class="form-control" id="Password" placeholder="Password">
                   <small id="pwdHelp" class="form-text text-muted"></small>
                 </div><br>
                 <div class="link">
-                  <label class="form-check-label" for="exampleCheck1">Not a user? <a href="" class="link">Signup</a></label>
+                  <label class="form-check-label" for="exampleCheck1">Not a user? <a href="Signup.html" class="link">Signup</a></label>
                 </div><br>
                 <button type="submit" class="btn btn-success">Submit</button>
                 <button type="reset" class="btn btn-secondary">Reset</button>
