--- a/public/css/login.css
+++ b/public/css/login.css
@@ -10,6 +10,7 @@ body{
     top:50%;
     transform: translate(0,50%);
     width: 700px;
+
     margin-right: auto;
     margin-left: auto;
     background: linear-gradient(to bottom right,rgba(211, 193, 193,0.3),rgba(211, 193, 193, 0.3));
@@ -21,13 +22,13 @@ body{
     background: linear-gradient(to bottom right,rgba(211, 193, 193,0.3),rgba(211, 193, 193, 0.3));
     margin-left: 2px;
     border-radius: 10px;
-    height:300px;
+   
 }
 
 .con3{
     margin-right: 2px;
     border-radius: 10px;
-    height:300px;
+
 }
 
 img{
@@ -106,5 +107,11 @@ input[type=text], textarea {
     margin: 5px 1px 3px 0px;
     border: 1px solid rgb(238, 81, 81);
     color: #ffffff;
+  }
+
+  /*email and pwd incorrect msg*/
+  #emailHelp,#pwdHelp{
+    color:rgb(238, 255, 0);
+    font-weight:bold;
   }
   
