--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,5 @@
 body{
-    background:url("https://images.unsplash.com/photo-1559999831-7deaf136d4a9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Nnx8bWluaW1hbCUyMDRrfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60") no-repeat center center fixed;
+    background:url("../images/pexels-travis-blessing-1363876.jpg") no-repeat center center fixed;
     /* background: linear-gradient(to bottom right, #d4d4d4 0%, #cb2525 100%); */
     background-size:cover;
     position: relative;
@@ -7,10 +7,9 @@ body{
 
 .con1{
     position: relative;
-    top:50%;
+    /* top:50%; */
     transform: translate(0,50%);
-    width: 700px;
-
+    width: 800px;
     margin-right: auto;
     margin-left: auto;
     background: linear-gradient(to bottom right,rgba(211, 193, 193,0.3),rgba(211, 193, 193, 0.3));
@@ -22,13 +21,14 @@ body{
     background: linear-gradient(to bottom right,rgba(211, 193, 193,0.3),rgba(211, 193, 193, 0.3));
     margin-left: 2px;
     border-radius: 10px;
+    
    
 }
 
 .con3{
     margin-right: 2px;
     border-radius: 10px;
-
+  height:300px;
 }
 
 img{
