--- a/views/Signup.html
+++ b/views/Signup.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="../public/css/signup.css">
 </head>
 <body>
-    <div class="container">
-
+    <div class="container-12 p-3 main">
+        <div class="col-6 p-3 sub1">
+            <img src="https://images.unsplash.com/photo-1581054311740-5eb4ff39900d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDd8fHdpZGV8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="" width="100%" height="100%">
+        </div>
+        <div class="col-6 p-3 sub2">
+            <h1>STUDENT SIGNUP</h1>
+            <form id="formSignup">
+                <div class="form-group">
+                    <label for="Name">Name:</label>
+                    <input type="text" class="form-control" id="Name">
+                    <p id="NameErr"></p>
+                </div>
+                <div class="form-group">
+                    <label for="RollNo">Roll Number:</label>
+                    <input type="text" class="form-control" id="RollNo">
+                    <p id="RollNoErr"></p>
+                </div>
+                <div class="form-group">
+                    <label for="Email">Email Id:</label>
+                    <input type="text" class="form-control" id="Email">
+                    <p id="EmailErr"></p>
+                </div>
+                <div class="form-group">
+                    <label for="Pwd">Password:</label>
+                    <input type="password" class="form-control" id="Pwd">
+                    <p id="Pwd"></p>
+                </div>
+                <div class="form-group">
+                    <label for="CPwd">Confirm Password:</label>
+                    <input type="password" class="form-control" id="CPwd">
+                    <p id="CPwd"></p>
+                </div>
+                <div class="form-group">
+                    <label for="Gender">Gender:</label><br>
+                    <input type="radio" class="radio-inline"> Male 
+                    <input type="radio" class="radio-inline"> Female 
+                    <input type="radio" class="radio-inline"> Other 
+                </div><br>
+                <div class="form-group">
+                    <input type="Submit" class="btn btn-success" value="Submit">
+                    <input type="reset" class="btn btn-secondary" value="Clear">
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
