--- a/views/Signup.html
+++ b/views/Signup.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="../public/css/signup.css">
 </head>
 <body>
-    <div class="container-12 p-3 main">
-        <div class="col-6 p-3 sub1">
+    <div class="container-sm-12 p-3 main">
+        <div class="col-sm-6 p-3 sub1">
             <img src="https://images.unsplash.com/photo-1581054311740-5eb4ff39900d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDd8fHdpZGV8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="" width="100%" height="100%">
         </div>
-        <div class="col-6 p-3 sub2">
+        <div class="col-sm-6 p-3 sub2">
             <h1>STUDENT SIGNUP</h1>
             <form id="formSignup">
                 <div class="form-group">
