Changing method to POST in both pages

--- a/views/Login.html
+++ b/views/Login.html
@@ -14,7 +14,7 @@
       </div>
         <div class="col-sm-7 p-3 con2">
           <h1>STUDENT LOGIN</h1>
-            <form id="form">
+            <form id="form" action="/validate" method="POST">
                 <div class="form-group">
                   <label for="exampleInputEmail1">EMAIL ADDRESS</label>
                   <input type="text" class="form-control" id="Email" aria-describedby="emailHelp" placeholder=" Email">
