--- a/views/Signup.html
+++ b/views/Signup.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col-sm-6 p-3 sub2">
             <h1>STUDENT SIGNUP</h1>
-            <form id="formSignup">
+            <form id="formSignup" action="/signupValidate" method="POST">
                 <div class="form-group">
                     <label for="Name">Name:</label>
                     <input type="text" class="form-control" id="Name">
