Signup Page validation color change

--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -25,3 +25,7 @@ body{
 .sub2{
     background: linear-gradient(to bottom right,rgba(255, 255, 255, 0.308),rgba(255, 254, 254, 0.3));
 }
+p{
+    font-weight: bold;
+    color: red;
+}
