--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -17,18 +17,18 @@
             <form id="form" action="/validate" method="POST">
                 <div class="form-group">
                   <label for="exampleInputEmail1">EMAIL ADDRESS</label>
-                  <input type="text" class="form-control" id="Email" aria-describedby="emailHelp" placeholder=" Email">
+                  <input type="text" class="form-control" name="Email" id="Email" aria-describedby="emailHelp" placeholder=" Email">
                   <p id="emailHelp"></p>
                 </div>
                 <div class="form-group">
                   <label for="exampleInputPassword1">PASSWORD</label>
-                  <input type="password" class="form-control" id="Password" placeholder=" Password">
+                  <input type="password" class="form-control" id="Password" placeholder=" Password" name="password">
                   <p id="pwdHelp"></small>
                 </div>
                 <div class="link">
                   <label class="form-check-label" for="exampleCheck1">Not a user? <a href="Signup.html" class="link">Signup</a></label>
                 </div><br>
-                <input type="button" class="btn btn-success" onclick="isValid()" value="Submit">
+                <input type="submit" class="btn btn-success" onclick="isValid()" value="Submit">
                 <button type="reset" class="btn btn-secondary">Reset</button>
               </form>
         </div>
