--- a/views/Signup.ejs
+++ b/views/Signup.ejs
@@ -17,22 +17,22 @@
             <form id="formSignup" action="/signupValidate" method="POST">
                 <div class="form-group">
                     <label for="Name">Name:</label>
-                    <input type="text" class="form-control" id="Name">
+                    <input type="text" class="form-control" id="Name" name="Uname">
                     <p id="NameErr"></p>
                 </div>
                 <div class="form-group">
                     <label for="RollNo">Roll Number:</label>
-                    <input type="text" class="form-control" id="RollNo">
+                    <input type="text" class="form-control" id="RollNo" name="rollno">
                     <p id="RollNoErr"></p>
                 </div>
                 <div class="form-group">
                     <label for="Email">Email Id:</label>
-                    <input type="text" class="form-control" id="Email">
+                    <input type="text" class="form-control" id="Email" name="Email">
                     <p id="EmailErr"></p>
                 </div>
                 <div class="form-group">
                     <label for="Pwd">Password:</label>
-                    <input type="password" class="form-control" id="Pwd">
+                    <input type="password" class="form-control" id="Pwd" name="password">
                     <p id="PwdErr"></p>
                 </div>
                 <div class="form-group">
@@ -48,7 +48,7 @@
                     <p id="GenErr"></p>
                 </div>
                 <div class="form-group">
-                    <input type="button" class="btn btn-success" value="Submit" onclick="Validate()">
+                    <input type="submit" class="btn btn-success" value="Submit" onclick="Validate()">
                     <input type="reset" class="btn btn-secondary" value="Clear">
                 </div>
             </form>
