--- a/views/user-list.ejs
+++ b/views/user-list.ejs
@@ -24,28 +24,24 @@
                 </tr>
                 <% if(userData.length!=0){%>
                 <%var i=1;%>
-            <%userData.forEach{function(data){%>
+            <%userData.forEach(function(data){%>
             <tr>
                 <td><%=i;%></td>
-                <td><%=data.Student_Name %></td>
-                <td><%=data_student_Rollno%></td>
-                <% var datemonth=data.Date_of_exam.getMonth()+1%>
-                <td><%=data.Student_Email_Id;%></td>
-                <td><%=data.Test_1%></td>
-                <td><%=data.Test_2%></td>
-                <td><%=data.Test_3%></td>
-                <td><%=Math.round((data.t1+data.t2+data.t3)/3)%></td>
+                <td><%=results.Username %></td>
+                <td><%=results.rollno%></td>
+                <% var datemonth=results.exam_date.getMonth()+1%>
+                <td><%=results.Email;%></td>
+                <td><%=results.t1%></td>
+                <td><%=results.t2%></td>
+                <td><%=results.t3%></td>
+                <td><%=Math.round((results.t1+results.t2+results.t3)/3)%></td>
             </tr>
         <% i++;})%>
         <%} else{%>
         <tr>
             <td colspan="9">No data found</td>
         </tr>
-        
-        }
-        
-        
-        }}}
+        <%}%>        
             </table>
         </div>
     </div>
