--- a/views/user-list.ejs
+++ b/views/user-list.ejs
@@ -22,26 +22,24 @@
                     <th>Test 3</th>
                     <th>Average Score</th>
                 </tr>
-                <% if(userData.length!=0){%>
-                <%var i=1;%>
-            <%userData.forEach(function(data){%>
+                <% if(userData.length !=0){ %>
+            <% userData.forEach(function(results) => { %>
             <tr>
-                <td><%=i;%></td>
-                <td><%=results.Username %></td>
-                <td><%=results.rollno%></td>
-                <% var datemonth=results.exam_date.getMonth()+1%>
-                <td><%=results.Email;%></td>
-                <td><%=results.t1%></td>
-                <td><%=results.t2%></td>
-                <td><%=results.t3%></td>
-                <td><%=Math.round((results.t1+results.t2+results.t3)/3)%></td>
+                <td><%= results.Username %></td>
+                <td><%= results.rollno %></td>
+                <% var datemonth=results.exam_date.getMonth()+1 %>
+                <td><%= results.Email %></td>
+                <td><%= results.t1 %></td>
+                <td><%= results.t2 %></td>
+                <td><%= results.t3 %></td>
+                <td><%= Math.round((results.t1 + results.t2 + results.t3)/3) %></td>
             </tr>
-        <% i++;})%>
-        <%} else{%>
+        <% }); %>
+        <% } else{ %>
         <tr>
             <td colspan="9">No data found</td>
         </tr>
-        <%}%>        
+        <% } %>        
             </table>
         </div>
     </div>
