--- a/views/user-list.ejs
+++ b/views/user-list.ejs
@@ -23,17 +23,21 @@
                     <th>Average Score</th>
                 </tr>
                 <% if(userData.length !=0){ %>
-            <% userData.forEach(function(results) => { %>
+            <% userData.forEach((results) => { %>
+                <% var i=1; %>
             <tr>
+                <td><%= i; %></td>
                 <td><%= results.Username %></td>
                 <td><%= results.rollno %></td>
                 <% var datemonth=results.exam_date.getMonth()+1 %>
-                <td><%= results.Email %></td>
+                <td><%= results.exam_date.getDate()+"/"+datemonth+"/"+results.exam_date.getFullYear() %></td>
+                <!-- <td><%= results.Email %></td> -->
                 <td><%= results.t1 %></td>
                 <td><%= results.t2 %></td>
                 <td><%= results.t3 %></td>
                 <td><%= Math.round((results.t1 + results.t2 + results.t3)/3) %></td>
             </tr>
+                <% i++; %>
         <% }); %>
         <% } else{ %>
         <tr>
