Password working query v1.2

--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -26,7 +26,7 @@
                   <p id="pwdHelp"></small>
                 </div>
                 <div class="link">
-                  <label class="form-check-label" for="exampleCheck1">Not a user? <a href="Signup.html" class="link">Signup</a></label>
+                  <label class="form-check-label" for="exampleCheck1">Not a user? <a href="Signup" class="link">Signup</a></label>
                 </div><br>
                 <input type="submit" class="btn btn-success" onclick="isValid()" value="Submit">
                 <button type="reset" class="btn btn-secondary">Reset</button>
