--- a/views/Admin_login.html
+++ b/views/Admin_login.html
@@ -14,7 +14,7 @@
       </div>
         <div class="col-sm-7 p-3 con2">
           <h1>ADMIN LOGIN</h1>
-            <form id="form" action="/validate" method="POST">
+            <form id="form" action="/Adminvalidate" method="POST">
                 <div class="form-group">
                   <label for="exampleInputEmail1">EMAIL ADDRESS</label>
                   <input type="text" class="form-control" id="Email" aria-describedby="emailHelp" placeholder=" Email">
@@ -26,7 +26,7 @@
                   <p id="pwdHelp"></small>
                 </div>
                 <div class="link">
-                  <label class="form-check-label" for="exampleCheck1">Not a user? <a href="Signup.html" class="link">Signup</a></label>
+                  <label class="form-check-label" for="exampleCheck1">Not a user? <a href="Admin_Signup.html" class="link">Signup</a></label>
                 </div><br>
                 <input type="button" class="btn btn-success" onclick="isValid()" value="Submit">
                 <button type="reset" class="btn btn-secondary">Reset</button>
