--- a/views/Admin_signup.html
+++ b/views/Admin_signup.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col-sm-6 p-3 sub2">
             <h1>ADMIN SIGNUP</h1>
-            <form id="formSignup" action="/signupValidate" method="POST">
+            <form id="formSignup" action="/AdminsignupValidate" method="POST">
                 <div class="form-group">
                     <label for="Name">Name:</label>
                     <input type="text" class="form-control" id="Name">
@@ -50,7 +50,10 @@
                 <div class="form-group">
                     <input type="button" class="btn btn-success" value="Submit" onclick="Validate()">
                     <input type="reset" class="btn btn-secondary" value="Clear">
-                </div>
+                </div><br>
+                <div class="link1">
+                    <label class="form-check-label" for="exampleCheck1">Not a user? <a href="Admin_Login.html" class="link">Login</a></label>
+                  </div><br>
             </form>
         </div>
     </div>
